--- a/.github/workflows/build-fedora.yml
+++ b/.github/workflows/build-fedora.yml
@@ -1,15 +1,20 @@
 name: Build Fedora
 on:
   push:
-      tags:
-        - '*'
+    tags:
+      - '*'
   workflow_dispatch:
 
 jobs:
-  fedora-42:
-    name: Fedora 42
+  build:
+    name: Build Fedora ${{ matrix.fedora }}
     runs-on: ubuntu-latest
-    container: fedora:42
+    container: fedora:${{ matrix.fedora }}
+
+    strategy:
+      matrix:
+        fedora: [42, 43]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -45,27 +50,40 @@ jobs:
           cmake --build build
 
       - name: Rename binary
-        run: mv build/src/quickshell build/src/quickshell-fedora42
+        run: mv build/src/quickshell build/src/quickshell-${{ github.ref_name }}-fedora${{ matrix.fedora }}
 
       - name: Upload artifact
-        if: github.event_name == 'workflow_dispatch'
         uses: actions/upload-artifact@v4
         with:
-          name: quickshell-fedora42
-          path: build/src/quickshell-fedora42
-          retention-days: 90
+          path: build/src/quickshell-${{ github.ref_name }}-fedora${{ matrix.fedora }}
+          name: quickshell-${{ github.ref_name }}-fedora${{ matrix.fedora }}
+          retention-days: 7
+
+  release:
+    name: GitHub Release
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
 
       - name: GitHub Release
-        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
           name: "quickshell ${{ github.ref_name }}"
           body: |
-            **quickshell ${{ github.ref_name }}** — automatically built by GitHub Actions for Fedora
+            **quickshell ${{ github.ref_name }} (fork)** - automatically built by GitHub Actions for Fedora
 
-            **Download the binary**:
-             - [Fedora 42](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/quickshell-fedora42)
-          files: build/src/quickshell-fedora42
+            **Download the binaries directly:**:
+            - [quickshell (Fedora 42)](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/quickshell-${{ github.ref_name }}-fedora42)
+            - [quickshell (Fedora 43)](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/quickshell-${{ github.ref_name }}-fedora43)
+
+            This repository is a fork created by @karboggy for Fedora.
+            **Please check the official [quickshell](https://github.com/quickshell-mirror/quickshell/releases) project for more information**  
+          files: artifacts/**/quickshell-${{ github.ref_name }}-fedora*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
