--- a/.github/workflows/build-fedora-42.yml
+++ b/.github/workflows/build-fedora-42.yml
@@ -1,19 +1,16 @@
 name: Build Fedora 42
 on:
-  push:
-    tags:
-      - '*'
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      tag:
+        required: true
+        type: string
 
 jobs:
   build:
-    name: Build Fedora ${{ matrix.fedora }}
+    name: Build Fedora 42
     runs-on: ubuntu-latest
-    container: fedora:${{ matrix.fedora }}
-
-    strategy:
-      matrix:
-        fedora: [42]
+    container: fedora:42
 
     steps:
       - name: Checkout
@@ -50,40 +47,11 @@ jobs:
           cmake --build build
 
       - name: Rename binary
-        run: mv build/src/quickshell build/src/quickshell-${{ github.ref_name }}-fedora${{ matrix.fedora }}
+        run: mv build/src/quickshell build/src/quickshell-${{ inputs.tag }}-fedora42
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          path: build/src/quickshell-${{ github.ref_name }}-fedora${{ matrix.fedora }}
-          name: quickshell-${{ github.ref_name }}-fedora${{ matrix.fedora }}
+          path: build/src/quickshell-${{ inputs.tag }}-fedora42
+          name: quickshell-${{ inputs.tag }}-fedora42
           retention-days: 7
-
-  release:
-    name: GitHub Release
-    runs-on: ubuntu-latest
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-
-      - name: GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ github.ref_name }}
-          name: "quickshell ${{ github.ref_name }}"
-          body: |
-            **quickshell ${{ github.ref_name }} (fork)** - automatically built by GitHub Actions for Fedora
-
-            **Download the binaries directly:**:
-            - [quickshell (Fedora 42)](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/quickshell-${{ github.ref_name }}-fedora42)
-            - [quickshell (Fedora 43)](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/quickshell-${{ github.ref_name }}-fedora43)
-
-            This repository is a fork created by @karboggy for Fedora.
-            **Please check the official [quickshell](https://github.com/quickshell-mirror/quickshell/releases) project for more information**  
-          files: artifacts/**/quickshell-${{ github.ref_name }}-fedora*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
