ci: add dependencies polkit-devel

--- a/.github/workflows/build-fedora-43.yml
+++ b/.github/workflows/build-fedora-43.yml
@@ -39,6 +39,7 @@ jobs:
             libxcb-devel \
             pipewire-devel \
             pam-devel \
+            polkit-devel \
             which
           dnf clean all
 
