--- a/.github/workflows/build-fedora-42.yml
+++ b/.github/workflows/build-fedora-42.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           dnf -y install \
             cmake \
+            glib2-devel \
             qt6-qtbase-devel \
             qt6-qtdeclarative-devel \
             qt6-qtshadertools-devel \
@@ -36,6 +37,7 @@ jobs:
             libxcb-devel \
             pipewire-devel \
             pam-devel \
+            polkit-devel \
             which
           dnf clean all
 
